# pydantic-sqlalchemy-mapper

./: pyproject.toml
pydantic_sqlalchemy_mapper/: __init__.py  loader.py  mapper.py
